--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <body>
-    <img src="images/banner.jpg" width="50%" alt="banner">
+    <img src="images/banner.JPG" width="50%" alt="banner">
     <!-- image is 75% of window size and adjust accordingly-->
     <!-- alt is text that will show if image does not load-->
     <h1>Ryan Cheung's Portal</h1>
