--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
   </header>
 
   <body>
-    <img src="images/banner.JPG" width="50%" alt="banner">
+    <div class="img-with-text-below">
+    <img src="images/banner.jpg" width="50%" alt="banner">
     <!-- image is 75% of window size and adjust accordingly-->
     <!-- alt is text that will show if image does not load-->
+    <p><center>Photo by Barbara Willison</center></p>
+    </div>
+    
     <h1>Ryan Cheung's Portal</h1>
     <h2>About Me</h2>
     <p>I am a doctoral student studying Counselor Education and Supervision.</p>
