--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="img-with-text-below">
-    <img src="images/banner.jpg" width="50%" alt="banner">
+    <img src="images/banner.JPG" width="50%" alt="banner">
     <!-- image is 75% of window size and adjust accordingly-->
     <!-- alt is text that will show if image does not load-->
     <p><center>Photo by Barbara Willison</center></p>
