--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <img src="images/banner.JPG" width="50%" alt="banner">
     <!-- image is 75% of window size and adjust accordingly-->
     <!-- alt is text that will show if image does not load-->
-    <p><center>Photo by Barbara Willison</center></p>
+    <p><center><i>Photo by Barbara Willison</i></center></p>
     </div>
     
     <h1>Ryan Cheung's Portal</h1>
