--- a/resume.html
+++ b/resume.html
@@ -26,6 +26,8 @@
     <p>Email: <a href="mailto:ryan.cheung@unco.edu" target="_blank">ryan.cheung@unco.edu</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
+    <p>Curriculum vitae <a href="https://docs.google.com/document/d/1Y3TJRaPcgRdQPEwuveWaFTBvJFNnvvK95bR3oO-X4Ew/edit?usp=sharing" target="_blank">Click Here</a></h3>
+    
     <h2>Portfolio</h2>
     <h3>ORCiD: <a href="https://orcid.org/0000-0002-4898-9183" target="_blank">https://orcid.org/0000-0002-4898-9183</a></h3>
 
