--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>I am a fourth year student.</p>
 
     <h2>Credentials and Portfolio</h2>
-    <p><a href = "resume.html">My CV</a> | <a href = "https://linkedin.com/in/cheungryan">My LinkedIn</a></p>
+    <p><a href = "resume.html">My Resume</a> | <a href = "https://linkedin.com/in/cheungryan">My LinkedIn</a></p>
     <!-- a is an anchor tab-->
 
     <h2>Contact</h2>
