--- a/resume.html
+++ b/resume.html
@@ -21,39 +21,32 @@
     <img src="images/headshot.jpg" alt="Ryan Cheung's headshot" width="20%">
 
     <h1>Ryan Cheung</h1>
-    <h4>Doctoral Student</h4>
+    <h4>Doctoral Candidate</h4>
 
     <p>Email: <a href="mailto:ryan.cheung@unco.edu" target="_blank">ryan.cheung@unco.edu</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
-
-    <p>Resume: <a href="https://docs.google.com/document/d/1Y3TJRaPcgRdQPEwuveWaFTBvJFNnvvK95bR3oO-X4Ew/edit?usp=sharing" target="_blank">Click Here</a></p>
-    <p>Please <a href="mailto:ryan.cheung@unco.edu" target="_blank">email me </a> if you would like my curriculum vitae (CV)<p>
     
-    <h2>Portfolio</h2>
-    <h3>ORCiD: <a href="https://orcid.org/0000-0002-4898-9183" target="_blank">https://orcid.org/0000-0002-4898-9183</a></h3>
-
+    <p>Resume: <a href="https://docs.google.com/document/d/1Y3TJRaPcgRdQPEwuveWaFTBvJFNnvvK95bR3oO-X4Ew/edit?usp=sharing" target="_blank">Click Here</a></p>
+   
     <h2>Education</h2>
 
     <h3>University of Northern Colorado, Greeley, CO</h3>
-    <h4>Ph.D Counselor Education and Supervision</h4>
+    <h4>Ph.D. Counselor Education and Supervision, 2023</h4>
 
-    <h2>Teaching Experiences</h2>
+    <h2>Professional/Academic Experience</h2>
 
     <h3>University of Northern Colorado, Greeley, CO</h3>
-    <h4>Guest Lecturer</h4>
-    <h5>Spring 2021</h5>
+    <h4>Guest Lecturer, Spring 2021</h4>
       <ul>
         <li>Guest lectured for Seminar in Advcanced Multicultural Perspectives in CES</li>
         <li>Lecuted for Orientation to Clinical Counseling</li>
       </ul>
 
-    <h3>Arizona State University, Tempe, AZ</h3>
-    <h4>Teaching Assistant</h4>
-    <h5>Spring 2019</h5>
-      <ul>
-        <li>Taught Choosing a Major</li>
-        <li>Taught Major and Career Exploration</li>
-      </ul>
+    <h2>Academic Publications</h2>
+    <h3>ORCiD: <a href="https://orcid.org/0000-0002-4898-9183" target="_blank">https://orcid.org/0000-0002-4898-9183</a></h3>
+      
+    <p>Please <a href="mailto:ryan.cheung@unco.edu" target="_blank">email me </a> if you would like my curriculum vitae (CV)<p>
+   
   </body>
 
   <footer>
