--- a/resume.html
+++ b/resume.html
@@ -26,6 +26,8 @@
     <p>Email: <a href="mailto:ryan.cheung@unco.edu" target="_blank">ryan.cheung@unco.edu</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
     
+    <p>Resume: <a href="https://docs.google.com/document/d/1Y3TJRaPcgRdQPEwuveWaFTBvJFNnvvK95bR3oO-X4Ew/edit?usp=sharing" target="_blank">Click Here</a></p>
+   
     <h2>Education</h2>
 
     <h3>University of Northern Colorado, Greeley, CO</h3>
