--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
     
     <h1>Ryan Cheung's Portal</h1>
     <h2>About Me</h2>
-    <p>I am a doctoral student studying Counselor Education and Supervision.</p>
-    <p>The University of Colorado is CACREP accredited.</p>
-    <p>I am a fourth year student.</p>
-
+    <p>I am a fourth year doctoral student studying Counselor Education and Supervision
+       at The University of Colorado (CACREP accredited).</p>
+   
     <h2>Credentials and Portfolio</h2>
     <p><a href = "resume.html">My Resume</a> | <a href = "https://linkedin.com/in/cheungryan">My LinkedIn</a></p>
     <!-- a is an anchor tab-->
