--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <h2>About Me</h2>
     <p>I am a fourth year doctoral student studying Counselor Education and Supervision
        at The University of Colorado (CACREP accredited).</p>
+    <p>I enjoy anime, boxing, and video games.</p>
    
     <h2>Credentials and Portfolio</h2>
     <p><a href = "resume.html">My Resume</a> | <a href = "https://linkedin.com/in/cheungryan">My LinkedIn</a></p>
