--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>Ryan Cheung's Portal</h1>
     <h2>About Me</h2>
     <p>I am a fourth year doctoral student studying Counselor Education and Supervision
-       at The University of Colorado (CACREP accredited).</p>
+       at The University of Northern Colorado (CACREP Accredited).</p>
     <p>I enjoy anime, boxing, and video games.</p>
    
     <h2>Credentials and Portfolio</h2>
