--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="img-with-text-below">
-    <img src="images/banner.JPG" width="50%" alt="banner">
+    <img src="images/banner.JPG" width="30%" alt="banner">
     <!-- image is 75% of window size and adjust accordingly-->
     <!-- alt is text that will show if image does not load-->
     <p><center><i>Photo by Barbara Willison</i></center></p>
@@ -35,7 +35,7 @@
     <h1>Ryan Cheung's Portal</h1>
     <h2>About Me</h2>
     <p>I am a fourth year doctoral student studying Counselor Education and Supervision
-       at The University of Northern Colorado (CACREP Accredited).</p>
+       at the University of Northern Colorado (CACREP Accredited).</p>
     <p>I enjoy anime, boxing, and video games.</p>
    
     <h2>Credentials and Portfolio</h2>
