--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
     <h2>Academic Publications</h2>
     <h3>ORCiD: <a href="https://orcid.org/0000-0002-4898-9183" target="_blank">https://orcid.org/0000-0002-4898-9183</a></h3>
       
-    <p>Please <a href="mailto:ryan.cheung@unco.edu" target="_blank">email me </a> if you would like my curriculum vitae (CV)<p>
+    <p>Please <a href="mailto:ryan.cheung@unco.edu" target="_blank">email me </a> if you would like my curriculum vitae (CV).<p>
    
   </body>
 
